objects/AreaCity__c.object
<CustomObject>
    <description>A list of cities in an area defined by city.</description>
    <fields>
        <fullName>AreaCityEID__c</fullName>
        <description>The enterprise ID for this area-city combination.</description>
        <externalId>true</externalId>
        <inlineHelpText>The enterprise ID for this area-city combination.</inlineHelpText>
        <label>Area City EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>The area that is defined by this list of cities.</description>
        <inlineHelpText>The area that is defined by this list of cities.</inlineHelpText>
        <label>Area</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipLabel>Area Cities</relationshipLabel>
        <relationshipName>AreaCities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The city that is in this area.</description>
        <inlineHelpText>The city that is in this area.</inlineHelpText>
        <label>City</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Area Cities</relationshipLabel>
        <relationshipName>AreaCities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Area City</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Area City Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Area Cities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>